--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "tw-elements-react": "^1.0.0-alpha2"
   },
   "devDependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
